# Sistemas-integrados-

TechShop/: README.md  pyproject.toml
TechShop/techshop/: Broker.py  Servidor1.py  Servidor2.py  docker-compose.yml  dockerfile
TechShop/techshop/conexaoCliente/: Cliente.py
TechShop/techshop/servidores/: Cliente.py
