[tool.poetry]
name = "techshop"
version = "1.0.0"
description = "criando um projeto de sistemas distribuidos usando docker, python, flask"
authors = ["nicole.beiger <nicolenbeiger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
